shell cmd test